--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -40,6 +40,16 @@
             {{ end }}
            <!-- SNS Link -->
            <ul class="list-inline"> 
+                    {{ with .Site.Params.social.email }}
+                    <li>
+                        <a href="mailto:{{ . }}">
+                            <span class="fa-stack fa-lg">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                    </li>
+		    {{ end }}
                {{ if .Site.Params.social.rss }}
                <li>
                    <a href='{{ with .OutputFormats.Get "RSS" }}{{ .RelPermalink }}{{ end }}' rel="alternate" type="application/rss+xml" title="{{ .Site.Title | default "" }}" >
